--- a/prime/Cargo.toml
+++ b/prime/Cargo.toml
@@ -11,5 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 numpy = "0.23.0"
 pyo3 = { version = "0.23.1", features = ["extension-module"] }
+rand = "0.9.0"
+rayon = "1.10.0"
 rustfft = "6.2.0"
 
